tests/parser/fail/illegal-octothorpe.som
"test:
failMessage:
  contains: '`#`'
"

IllegalOctothorpe = (
  run = (
    |v|
    v := #{}
  )
)
